--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="services">
+    <div class="services__body">
+        <div class="services__title">
+            <div class="services__title title">Наши услуги</div>
+            </div>
+        </div>
+   <div class="services__col">
+       <div class="services__parts">
+           <div class="item-services">
+               <div class="item-services__image">
+                   <img src="images/img.jpg" alt="services-img">
+               </div>
+               <div class="item-services__subtitle">Аудит IT-инфраструктуры</div>
+               <div class="item-services__button">Оставить заявку</div>
+                   <img src="images/img2.jpg" alt="services-img">
+               </div>
+               <div class="item-services__subtitle">Консалтинг</div>
+               <div class="item-services__button">Оставить заявку</div>
+                   <img src="images/img3.jpg" alt="services-img">
+               </div>
+               <div class="item-services__subtitle">Разработка IT стратегии</div>
+               <div class="item-services__button">Оставить заявку</div>
+           </div>
+           </div>
+       </div>
+   </div>
+</div>
 </body>
 </html>
