--- a/index.html
+++ b/index.html
@@ -16,32 +16,175 @@
     />
 </head>
 <body>
-<div class="services">
-    <div class="services__body">
-        <div class="services__title">
-            <div class="services__title title">Наши услуги</div>
+    <header class="header">
+        <div class="container">
+            <div class="header__logo">
+                <a class="header__logo--link" href="#">
+                    <img class="header__logo--logo" src="images/JOGO.jpg" alt="Logo">
+                </a>
+            </div> 
+            <div class="header__address address">
+                <ul class="header__address--texts">
+                    <li class="header__texts--item">
+                        <a href="#" class="header__item--location">
+                            Улица Исакеева,2а/2, Бишкек
+                        </a>
+                    </li>
+                    <li class="header__texts--item">
+                        <a href="#" class="header__item--contact ">
+                            tell:      +996 709 11 10 11 
+                        </a>
+                        <br>
+                        <a href="#" class="header__item--contact ">
+                            email:  ivan.ivanov@gmail.com
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <nav class="header__navbar">
+                <ul class="header__navbar--menu">
+                    <li class="header__menu--item">
+                        <a href="#" class="header__item--link">Главная</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#" class="header__item--link">О компании</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#" class="header__item--link">Услуги</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#" class="header__item--link">Новоти</a>
+                    </li>
+                    <li class="header__menu--item">
+                        <a href="#" class="header__item--link">Контакты</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <section class="main__sectoin--hero ">
+            <div class="container">
+                <h2 class="main__hero--note">Мы одним из многочисленных направлений консалтинга  в мире </h2>      
+                <div class="main__hero--link">
+                    <a class="main__link" href="#">Узнать больше</a>
+                </div>
+            </div>
+        </section>
+        <div class="services">
+            <div class="services__body">
+                <div class="services__title">
+                    <div class="services__title title">Наши услуги</div>
+                    </div>
+                </div>
+           <div class="services__col">
+               <div class="services__parts">
+                   <div class="item-services">
+                       <div class="item-services__image">
+                           <img src="images/img.jpg" alt="services-img">
+                       </div>
+                       <div class="item-services__subtitle">Аудит IT-инфраструктуры</div>
+                       <div class="item-services__button">Оставить заявку</div>
+                           <img src="images/img2.jpg" alt="services-img">
+                       </div>
+                       <div class="item-services__subtitle">Консалтинг</div>
+                       <div class="item-services__button">Оставить заявку</div>
+                           <img src="images/img3.jpg" alt="services-img">
+                       </div>
+                       <div class="item-services__subtitle">Разработка IT стратегии</div>
+                       <div class="item-services__button">Оставить заявку</div>
+                   </div>
+                   </div>
+               </div>
+           </div>
+        </div>
+        <section class="main__section--levels">
+            <div class="container">
+                <h2 class="section__levels--title">Уровни консалтинга в IT</h2>
+                <img class="section__levels--schedule" src="images/Уровни-консалтинга.webp" alt="levels-schedule">
+                <p class="section__levels--text">
+                    <strong class="section__text--strong">Нижний уровень</strong> процессный консалтинг. IT-консультант смотрит на процессы, выявляет их слабые места и предлагает конкретные изменения.
+                </p>
+                <p class="section__levels--text">
+                    <strong class="section__text--strong">На среднем уровне</strong> - в рамках <strong class="section__text--strong">архитектурного консалтинга</strong>  — главным становится ответ на вопрос: «Как выстроить или перестроить IT-архитектуру компании, чтобы она была наиболее эффективной в рамках существующей бизнес-модели и целей компании?» Это уже работа не с отдельными процессами, а со всей системой деятельности компании.
+                </p>
+                <p class="section__levels--text">
+                    <strong class="section__text--strong">Стратегический консалтинг</strong>  — это <strong class="section__text--strong">высший уровень</strong> , уровень изменения стратегии и цифровой трансформации бизнеса. На этом уровне IT-консалтинг работает не с конкретными технологиями, а со стратегическими решениями и перестройкой бизнес-модели.
+                </p>
+            </div>
+        </section>
+        <hr>
+        <section class="main__section--why">
+            <div class="container">
+                <div class="section__why--icons-a">
+                    <div class="section__icons--icon"></div>
+                        <p class="section__icons--text">
+                        <h3 class="section__icons--text-title">Экспертиза</h3>  Наша команда имеет многолетний опыт работы в решении бизнес-задач в различных доменах. 
+                    </p>
+                </div>
+                <div class="section__why--icon-b">
+                    <div class="section__icons--icon"></div>
+                        <p class="section__icons--text">
+                        <h3 class="section__icons--text-title">Комплексный подход
+                        </h3> Проведем аудит любой вашей системы и составим индивидуальный план со списком рекомендации по ее улучшению.
+                    </p>
+                </div>
+                <div class="section__why--icon-c">
+                    <div class="section__icons--icon"></div>
+                        <p class="section__icons--text">
+                        <h3 class="section__icons--text-title">Прозрачное ценообразование
+                        </h3> Оставляйте заявку на сайте и получите стоимость услуг и оценку работ для вашей компании.
+                        </p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+    <div class="container">
+        <div class="first-content">
+            <h1>IT Консалтинг</h1>
+            <p>Наша компания предоставляет услуги IT-консалтинга по внедрению IT для успешного достижения целей вашего бизнеса.
+                Развивайте свой бизнес вместе с нами!</p>
+            <div class="icons">
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-linkedin-in"></i>
+                <i class="fab fa-instagram"></i>
             </div>
         </div>
-   <div class="services__col">
-       <div class="services__parts">
-           <div class="item-services">
-               <div class="item-services__image">
-                   <img src="images/img.jpg" alt="services-img">
-               </div>
-               <div class="item-services__subtitle">Аудит IT-инфраструктуры</div>
-               <div class="item-services__button">Оставить заявку</div>
-                   <img src="images/img2.jpg" alt="services-img">
-               </div>
-               <div class="item-services__subtitle">Консалтинг</div>
-               <div class="item-services__button">Оставить заявку</div>
-                   <img src="images/img3.jpg" alt="services-img">
-               </div>
-               <div class="item-services__subtitle">Разработка IT стратегии</div>
-               <div class="item-services__button">Оставить заявку</div>
-           </div>
-           </div>
-       </div>
-   </div>
+        <div class="second-content">
+            <h1>Навигация</h1>
+            <ul>
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">О компании</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </div>
+        <div class="third-content">
+            <h1> страница</h1>
+            <ul>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Как мы работаем?</a> </li>
+                <li><a href="#">Быстрая поддержка</a></li>
+                <li><a href="#">Связаться с нами</a> </li>
+                <li><a href="#">Конфиденциальность</a> </li>
+            </ul>
+        </div>
+        <div class="contact-form">
+            <h1>Связаться с нами</h1>
+            <input type="text" placeholder="Полное имя"/>
+            <input type="text" placeholder="e-mail адрес"/>
+            <textarea placeholder="Отправить сообщение"></textarea>
+            <button type="button">Отправить</button>
+        </div>
+    </div>
+    <div class="copyrightText">
+    <p>Copyright ©  2021. xxnameofcompanyxx. all rights reserved</p>
 </div>
+</footer>
+
+
 </body>
 </html>
