--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             </div>
         </section>
         <div class="services">
+           <div class="container">
             <div class="services__body">
                 <div class="services__title">
                     <div class="services__title title">Наши услуги</div>
@@ -97,11 +98,12 @@
                    </div>
                </div>
            </div>
+           </div>
         </div>
         <section class="main__section--levels">
             <div class="container">
                 <h2 class="section__levels--title">Уровни консалтинга в IT</h2>
-                <img class="section__levels--schedule" src="images/Уровни-консалтинга.webp" alt="levels-schedule">
+                <img class="section__levels--schedule" src="images/levels.jpg" alt="levels-schedule">
                 <p class="section__levels--text">
                     <strong class="section__text--strong">Нижний уровень</strong> процессный консалтинг. IT-консультант смотрит на процессы, выявляет их слабые места и предлагает конкретные изменения.
                 </p>
