--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="main__hero--link">
                     <a class="main__link" href="#">Узнать больше</a>
                 </div>
+                <img class="main__hero--img" src="images/it-consulting.jpg" alt="it-consulting.jpg">
             </div>
         </section>
         <div class="services">
