--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <button type="button">Отправить</button>
         </div>
         <div class="copyrightText">
-        <p>Copyright ©  2021. xxnameofcompanyxx. all rights reserved</p>
+        <p> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
         </div>
     </div>
 </footer>
