--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header__logo">
-                <a class="header__logo--link" href="#">
-                    <img class="header__logo--logo" src="images/JOGO.jpg" alt="Logo">
-                </a>
-            </div> 
-            <div class="header__address address">
-                <ul class="header__address--texts">
-                    <li class="header__texts--item">
-                        <a href="#" class="header__item--location">
-                            Улица Исакеева,2а/2, Бишкек
-                        </a>
-                    </li>
-                    <li class="header__texts--item">
-                        <a href="#" class="header__item--contact ">
-                            tell:      +996 709 11 10 11 
-                        </a>
-                        <br>
-                        <a href="#" class="header__item--contact ">
-                            email:  ivan.ivanov@gmail.com
-                        </a>
-                    </li>
-                </ul>
+            <div class="header__inner">
+                    <a class="header__inner--link" href="#">
+                        <img class="header__link--logo" src="images/JOGO.jpg" alt="Logo">
+                    </a>
+                <div class="header__address">
+                    <ul class="header__address--texts">
+                        <li class="header__texts--item">
+                            
+                            <a href="#" class="header__item--location">
+                                Улица Исакеева,2а/2, Бишкек
+                            </a>
+                        </li>
+                        <li class="header__texts--item">
+                            <a href="#" class="header__item--location ">
+                                tell:      +996 709 11 10 11 
+                            </a>
+                            <br>
+                            <a href="#" class="header__item--location ">
+                                email:  ivan.ivanov@gmail.com
+                            </a>
+                        </li>
+                    </гl>
+                </div>
             </div>
             <nav class="header__navbar">
                 <ul class="header__navbar--menu">
