--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
         <div class="container">
             <div class="header__inner">
                     <a class="header__inner--link" href="#">
-                        <img class="header__link--logo" src="images/JOGO.jpg" alt="Logo">
+                        <img class="header__inner--logo" src="images/JOGO.jpg" alt="Logo">
                     </a>
                 <div class="header__address">
                     <ul class="header__address--texts">
-                        <li class="header__texts--item">
-                            
-                            <a href="#" class="header__item--location">
+                        <li class="header__address--item">
+                            <div class="header__address--item-address"></div>
+                            <a href="#" class="header__address--location">
                                 Улица Исакеева,2а/2, Бишкек
                             </a>
                         </li>
-                        <li class="header__texts--item">
-                            <a href="#" class="header__item--location ">
+                        <li class="header__address--item">
+                            <a href="#" class="header__address--location ">
                                 tell:      +996 709 11 10 11 
                             </a>
                             <br>
-                            <a href="#" class="header__item--location ">
+                            <a href="#" class="header__address--location ">
                                 email:  ivan.ivanov@gmail.com
                             </a>
                         </li>
@@ -143,7 +143,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
     <div class="container">
         <div class="first-content">
             <h1>IT Консалтинг</h1>
