add Конец header

--- a/index.html
+++ b/index.html
@@ -25,39 +25,40 @@
                 <div class="header__address">
                     <ul class="header__address--texts">
                         <li class="header__address--item">
-                            <div class="header__address--item-address"></div>
-                            <a href="#" class="header__address--location">
+                            
+                            <a href="#" class="header__address--location-vector">
                                 Улица Исакеева,2а/2, Бишкек
                             </a>
                         </li>
+
                         <li class="header__address--item">
-                            <a href="#" class="header__address--location ">
+                            <a href="#" class="header__address--location-tell ">
                                 tell:      +996 709 11 10 11 
                             </a>
                             <br>
-                            <a href="#" class="header__address--location ">
-                                email:  ivan.ivanov@gmail.com
+                            <a href="#" class="header__address--location-email ">
+                                email: ivanivanov.@gmail.com
                             </a>
                         </li>
-                    </гl>
+                    </ul>
                 </div>
             </div>
             <nav class="header__navbar">
                 <ul class="header__navbar--menu">
-                    <li class="header__menu--item">
-                        <a href="#" class="header__item--link">Главная</a>
+                    <li class="header__navbar--item">
+                        <a href="#" class="header__navbar--link">Главная</a>
                     </li>
-                    <li class="header__menu--item">
-                        <a href="#" class="header__item--link">О компании</a>
+                    <li class="header__navbar--item">
+                        <a href="#" class="header__navbar--link">О компании</a>
                     </li>
-                    <li class="header__menu--item">
-                        <a href="#" class="header__item--link">Услуги</a>
+                    <li class="header__navbar--item">
+                        <a href="#" class="header__navbar--link">Услуги</a>
                     </li>
-                    <li class="header__menu--item">
-                        <a href="#" class="header__item--link">Новоти</a>
+                    <li class="header__navbar--item">
+                        <a href="#" class="header__navbar--link">Новоти</a>
                     </li>
-                    <li class="header__menu--item">
-                        <a href="#" class="header__item--link">Контакты</a>
+                    <li class="header__navbar--item">
+                        <a href="#" class="header__navbar--link">Контакты</a>
                     </li>
                 </ul>
             </nav>
