--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         </div>
     </header>
     <main class="main">
-        <section class="main__sectoin--hero ">
+        <section class="main__hero ">
             <div class="container">
+                <div class="main__hero--bottom">
                 <h2 class="main__hero--note">Мы одним из многочисленных направлений консалтинга  в мире </h2>      
-                <div class="main__hero--link">
-                    <a class="main__link" href="#">Узнать больше</a>
+                    <a class="main__hero--link" href="#">Узнать больше</a>
                 </div>
                 <img class="main__hero--img" src="images/it-consulting.jpg" alt="it-consulting.jpg">
             </div>
