--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
                     <div class="services__title title">Наши услуги</div>
                     </div>
                 </div>
+                <hr>
            <div class="services__col">
                <div class="services__parts">
                    <div class="item-services">
@@ -103,44 +104,48 @@
            </div>
            </div>
         </div>
-        <section class="main__section--levels">
+        <section class="levels">
             <div class="container">
-                <h2 class="section__levels--title">Уровни консалтинга в IT</h2>
-                <img class="section__levels--schedule" src="images/levels.jpg" alt="levels-schedule">
-                <p class="section__levels--text">
-                    <strong class="section__text--strong">Нижний уровень</strong> процессный консалтинг. IT-консультант смотрит на процессы, выявляет их слабые места и предлагает конкретные изменения.
+                <h2 class="levels__title">Уровни консалтинга в  IT</h2>
+                <img class="levels__schedule" src="images/levels.jpg" alt="levels-schedule">
+                <p class="levels__text">
+                    <strong class="levels__text--strong">Нижний уровень</strong> процессный консалтинг. IT-консультант смотрит на процессы, выявляет их слабые места и предлагает конкретные изменения.
                 </p>
-                <p class="section__levels--text">
-                    <strong class="section__text--strong">На среднем уровне</strong> - в рамках <strong class="section__text--strong">архитектурного консалтинга</strong>  — главным становится ответ на вопрос: «Как выстроить или перестроить IT-архитектуру компании, чтобы она была наиболее эффективной в рамках существующей бизнес-модели и целей компании?» Это уже работа не с отдельными процессами, а со всей системой деятельности компании.
+                <p class="levels__text">
+                    <strong class="levels__text--strong">На среднем уровне</strong> - в рамках <strong class="levels__text--strong">архитектурного консалтинга</strong>  — главным становится ответ на вопрос: «Как выстроить или перестроить IT-архитектуру компании, чтобы она была наиболее эффективной в рамках существующей бизнес-модели и целей компании?» Это уже работа не с отдельными процессами, а со всей системой деятельности компании.
                 </p>
-                <p class="section__levels--text">
-                    <strong class="section__text--strong">Стратегический консалтинг</strong>  — это <strong class="section__text--strong">высший уровень</strong> , уровень изменения стратегии и цифровой трансформации бизнеса. На этом уровне IT-консалтинг работает не с конкретными технологиями, а со стратегическими решениями и перестройкой бизнес-модели.
+                <p class="levels__text">
+                    <strong class="levels__text--strong">Стратегический консалтинг</strong>  — это <strong class="levels__text--strong">высший уровень</strong> , уровень изменения стратегии и цифровой трансформации бизнеса. На этом уровне IT-консалтинг работает не с конкретными технологиями, а со стратегическими решениями и перестройкой бизнес-модели.
                 </p>
             </div>
         </section>
-        <hr>
-        <section class="main__section--why">
+        <section class="why">
             <div class="container">
-                <div class="section__why--icons-a">
-                    <div class="section__icons--icon"></div>
-                        <p class="section__icons--text">
-                        <h3 class="section__icons--text-title">Экспертиза</h3>  Наша команда имеет многолетний опыт работы в решении бизнес-задач в различных доменах. 
-                    </p>
-                </div>
-                <div class="section__why--icon-b">
-                    <div class="section__icons--icon"></div>
-                        <p class="section__icons--text">
-                        <h3 class="section__icons--text-title">Комплексный подход
-                        </h3> Проведем аудит любой вашей системы и составим индивидуальный план со списком рекомендации по ее улучшению.
-                    </p>
-                </div>
-                <div class="section__why--icon-c">
-                    <div class="section__icons--icon"></div>
-                        <p class="section__icons--text">
-                        <h3 class="section__icons--text-title">Прозрачное ценообразование
-                        </h3> Оставляйте заявку на сайте и получите стоимость услуг и оценку работ для вашей компании.
+                <h2 class="why__title">Почему мы?</h2>
+                <hr>
+                <ul class="why__block">
+                    <li class="why__icons">
+                        <div class="why__icon"><img src="images/why1.png" alt=""></div>
+                            <p class="why__text">
+                            <h3 class="why__text--title">Экспертиза</h3>  Наша команда имеет многолетний опыт работы в решении бизнес-задач в различных доменах. 
                         </p>
-                </div>
+                    </li>
+                    <li class="why__icons">
+                        <div class="why__icon"><img src="images/why2.png" alt=""></div>
+                            <p class="why__text">
+                            <h3 class="why__text--title">Комплексный подход
+                            </h3> Проведем аудит любой вашей системы и составим индивидуальный план со списком рекомендации по ее улучшению.
+                        </p>
+                    </li>
+                    <li class="why__icons">
+                        <div class="why__icon"><img src="images/why3.png" alt=""></div>
+                            <p class="why__text">
+                            <h3 class="why__text--title">Прозрачное ценообразование
+                            </h3> Оставляйте заявку на сайте и получите стоимость услуг и оценку работ для вашей компании.
+                            </p>
+                    </li>
+
+                </ul>
             </div>
         </section>
     </main>
