--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main class="main">
         <section class="main__hero ">
             <div class="container">
-                <div class="main__hero--bottom">
+                <div class="main__hero--button">
                 <h2 class="main__hero--note">Мы одним из многочисленных направлений консалтинга  в мире </h2>      
                     <a class="main__hero--link" href="#">Узнать больше</a>
                 </div>
@@ -151,43 +151,45 @@
     </main>
     <footer class="footer">
     <div class="container">
-        <div class="first-content">
-            <h1>IT Консалтинг</h1>
-            <p>Наша компания предоставляет услуги IT-консалтинга по внедрению IT для успешного достижения целей вашего бизнеса.
-                Развивайте свой бизнес вместе с нами!</p>
-            <div class="icons">
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-linkedin-in"></i>
-                <i class="fab fa-instagram"></i>
-            </div>
+        <div class="footer__first-content">
+            <a href="#">
+                <img class="footer__first-content--logo" src="./images/JOGO.jpg" alt="footer-logo">
+            </a>
+            <a href="# " class="footer__first-content--icons">
+                <ul>
+                    <li class="footer__first-content--icons-facebook"></li>
+                    <li class="footer__first-content--icons-twitter"></li>
+                    <li class="footer__first-content--icons-telegram"></li>
+                    <li class="footer__first-content--icons-instagram"></li>
+                </ul>
+            </a>
         </div>
-        <div class="second-content">
-            <h1>Навигация</h1>
-            <ul>
-                <li><a href="#">Главная</a></li>
-                <li><a href="#">О компании</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Контакты</a></li>
+        <div class="footer__second-content">
+            <h1 class="footer__second-content--title">Навигация</h1>
+            <ul class="footer__second-content--links">
+                <li class="footer__second-content--link"><a href="#">Главная</a></li>
+                <li class="footer__second-content--link"><a href="#">О компании</a></li>
+                <li class="footer__second-content--link"><a href="#">Услуги</a></li>
+                <li class="footer__second-content--link"><a href="#">Новости</a></li>
+                <li class="footer__second-content--link"><a href="#">Контакты</a></li>
             </ul>
         </div>
-        <div class="third-content">
-            <h1> страница</h1>
-            <ul>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Как мы работаем?</a> </li>
-                <li><a href="#">Быстрая поддержка</a></li>
-                <li><a href="#">Связаться с нами</a> </li>
-                <li><a href="#">Конфиденциальность</a> </li>
+        <div class="footer__third-content">
+            <h1 class="footer__third-content--title"> Страница</h1>
+            <ul class="footer__third-content--links">
+                <li class="footer__third-content--links"><a href="#">О нас</a></li>
+                <li class="footer__third-content--links"><a href="#">Как мы работаем?</a> </li>
+                <li class="footer__third-content--links"><a href="#">Быстрая поддержка</a></li>
+                <li class="footer__third-content--links"><a href="#">Связаться с нами</a> </li>
+                <li class="footer__third-content--links"><a href="#">Конфиденциальность</a> </li>
             </ul>
         </div>
-        <div class="contact-form">
-            <h1>Связаться с нами</h1>
-            <input type="text" placeholder="Полное имя"/>
-            <input type="text" placeholder="e-mail адрес"/>
-            <textarea placeholder="Отправить сообщение"></textarea>
-            <button type="button">Отправить</button>
+        <div class="footer__contact-form">
+            <h1 class="footer__contact-form-title">Связаться с нами</h1>
+            <input class="footer__contact-form--input" type="text" placeholder="Полное имя"/>
+            <input class="footer__contact-form--input" type="text" placeholder="e-mail адрес"/>
+            <textarea class="footer__contact-form--textarea" placeholder="Отправить сообщение"></textarea>
+            <button class="footer__contact-form--button" type="button">Отправить</button>
         </div>
         <div class="copyrightText">
         <p> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
