--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li class="header__address--item">
                             
                             <a href="#" class="header__address--location-vector">
-                                Улица Исакеева,2а/2, Бишкек
+                            <span class="header__address--location-icon"></span>    Улица Исакеева,2а/2, Бишкек
                             </a>
                         </li>
 
@@ -151,49 +151,48 @@
     </main>
     <footer class="footer">
     <div class="container">
-        <div class="footer__first-content">
-            <a href="#">
-                <img class="footer__first-content--logo" src="./images/JOGO.jpg" alt="footer-logo">
-            </a>
-            <a href="# " class="footer__first-content--icons">
-                <ul>
-                    <li class="footer__first-content--icons-facebook"></li>
-                    <li class="footer__first-content--icons-twitter"></li>
-                    <li class="footer__first-content--icons-telegram"></li>
-                    <li class="footer__first-content--icons-instagram"></li>
-                </ul>
+        <div class="footer__content">
+        <div class="footer__logo">
+            <a class="footer__logo--link" href="#">
+                <img class="footer__logo--img" src="./images/JOGO.jpg" alt="footer-logo">
             </a>
         </div>
-        <div class="footer__second-content">
-            <h1 class="footer__second-content--title">Навигация</h1>
-            <ul class="footer__second-content--links">
-                <li class="footer__second-content--link"><a href="#">Главная</a></li>
-                <li class="footer__second-content--link"><a href="#">О компании</a></li>
-                <li class="footer__second-content--link"><a href="#">Услуги</a></li>
-                <li class="footer__second-content--link"><a href="#">Новости</a></li>
-                <li class="footer__second-content--link"><a href="#">Контакты</a></li>
+            <a href="#" class="footer__icons-facebook"></a>
+            <a href="#" class="footer__icons-twitter"></a>
+            <a href="#" class="footer__icons-telegram"></a>
+            <a href="#" class="footer__icons-instagram"></a>
+        </div>
+        <div class="footer__content">
+            <h2 class="footer__content--title">Навигация</h2>
+            <ul class="footer__content--links">
+                <li class="footer__content--link"><a href="#">Главная</a></li>
+                <li class="footer__content--link"><a href="#">О компании</a></li>
+                <li class="footer__content--link"><a href="#">Услуги</a></li>
+                <li class="footer__content--link"><a href="#">Новости</a></li>
+                <li class="footer__content--link"><a href="#">Контакты</a></li>
             </ul>
         </div>
-        <div class="footer__third-content">
-            <h1 class="footer__third-content--title"> Страница</h1>
-            <ul class="footer__third-content--links">
-                <li class="footer__third-content--links"><a href="#">О нас</a></li>
-                <li class="footer__third-content--links"><a href="#">Как мы работаем?</a> </li>
-                <li class="footer__third-content--links"><a href="#">Быстрая поддержка</a></li>
-                <li class="footer__third-content--links"><a href="#">Связаться с нами</a> </li>
-                <li class="footer__third-content--links"><a href="#">Конфиденциальность</a> </li>
+        <div class="footer__content">
+            <h2 class="footer__content--title"> Страница</h2>
+            <ul class="footer__content--links">
+                <li class="footer__content--link"><a href="#">О нас</a></li>
+                <li class="footer__content--link"><a href="#">Как мы работаем?</a> </li>
+                <li class="footer__content--link"><a href="#">Быстрая поддержка</a></li>
+                <li class="footer__content--link"><a href="#">Связаться с нами</a> </li>
+                <li class="footer__content--link"><a href="#">Конфиденциальность</a> </li>
             </ul>
         </div>
-        <div class="footer__contact-form">
-            <h1 class="footer__contact-form-title">Связаться с нами</h1>
-            <input class="footer__contact-form--input" type="text" placeholder="Полное имя"/>
-            <input class="footer__contact-form--input" type="text" placeholder="e-mail адрес"/>
-            <textarea class="footer__contact-form--textarea" placeholder="Отправить сообщение"></textarea>
-            <button class="footer__contact-form--button" type="button">Отправить</button>
+        <div class="footer__content">
+            <h2 class="footer__content--title">Связаться с нами</h2>
+            <div class="footer__content--form">
+                <input class="footer__content--contact" type="text" placeholder="Полное имя"/>
+                <input class="footer__content--contact" type="text" placeholder="e-mail адрес"/>
+                <textarea class="footer__content--contact footer__content--contact-textarea" placeholder="Отправить сообщение"></textarea>
+                <button class="footer__content--contact footer__content--contact-button" type="button">Отправить</button>
+            </div>
         </div>
-        <div class="copyrightText">
-        <p> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
-        </div>
+
+        <p class="copytext"> &copy;  2021. xxnameofcompanyxx. all rights reserved</p>
     </div>
 </footer>
 
