--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
                     <ul class="header__address--texts">
                         <li class="header__address--item">
                             
-                            <a href="#" class="header__address--location-vector">
-                            <span class="header__address--location-icon"></span>    Улица Исакеева,2а/2, Бишкек
+                            <span class="header__address--icon-vector"></span>
+                            <a href="#" class="header__address--location-vector">    Улица Исакеева,2а/2, Бишкек
                             </a>
                         </li>
 
                         <li class="header__address--item">
+                            <span class="header__address--icon-tell"></span>
                             <a href="#" class="header__address--location-tell ">
                                 tell:      +996 709 11 10 11 
                             </a>
